--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="/css/style.min.css">
     <title>ohmyfood</title>
 </head>
 <body>
     <header>
-        <h1 class="logo">ohmyfood</h1>
+        <img src="/images/logo/ohmyfood@2x.svg" class="logo" alt="Logo">
     </header>
     <main>
         <section class="localisation">
@@ -24,9 +24,9 @@
             <div class="reservation">
                 <div class="heading">
                     <h1 class="title">Réservez le menu qui vous convient</h1>
-                    <p class="texte">Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
+                    <p class="text">Découvrez des restaurants d'exception, séléctionnés par nos soins</p>
                     <button class="explore" disabled>
-                        <p class="button__text">Explorer nos restaurants</p>
+                        <p class="button-text">Explorer nos restaurants</p>
                     </button>
                 </div>
             </div>
@@ -58,43 +58,55 @@
         <section class="restaurants">
             <h2 class="title">Restaurants</h2>
             <div class="card-container">
+                <a href="/restaurants/La-palette-du-gout.html" class="card-link"></a>
                 <img src="images/restaurants/resto-1-min.jpg" alt="Food" class="card-img">
                 <span class="new">Nouveau</span>
                 <div class="card-info">
                     <h3 class="title-info">La palette du goût</h3>
-                    <p class="texte">Ménilmontant</p>
-                    <i class="fa-regular fa-heart fa-xl"></i>
+                    <p class="text">Ménilmontant</p>
+                    <button disabled>
+                        <i class="fa-regular fa-heart"></i>
+                    </button>
                 </div>
             </div>
             <div class="card-container">
+                <a href="/restaurants/La-note-enchantee.html" class="card-link"></a>
                 <img src="images/restaurants/resto-2-min.jpg" alt="Food" class="card-img">
                 <span class="new">Nouveau</span>
                 <div class="card-info">
                     <h3 class="title-info">La note enchantée</h3>
-                    <p class="texte">Charonne</p>
-                    <i class="fa-regular fa-heart"></i>
+                    <p class="text">Charonne</p>
+                    <button disabled>
+                        <i class="fa-regular fa-heart"></i>
+                    </button>
                 </div>
             </div>
             <div class="card-container">
+                <a href="/restaurants/A-la-francaise.html" class="card-link"></a>
                 <img src="images/restaurants/resto-3-min.jpg" alt="Food" class="card-img">
                 <div class="card-info">
                     <h3 class="title-info">À la française</h3>
-                    <p class="texte">Cité Rouge</p>
-                    <i class="fa-regular fa-heart"></i>
+                    <p class="text">Cité Rouge</p>
+                    <button disabled>
+                        <i class="fa-regular fa-heart"></i>
+                    </button>
                 </div>
             </div>
             <div class="card-container">
+                <a href="/restaurants/Le-delice-des-sens.html" class="card-link"></a>
                 <img src="images/restaurants/resto-4-min.jpg" alt="Food" class="card-img">
                 <div class="card-info">
                     <h3 class="title-info">Le délice des sens</h3>
-                    <p class="texte">Folie-Méricourt</p>
-                    <i class="fa-regular fa-heart"></i>
+                    <p class="text">Folie-Méricourt</p>
+                    <button disabled>
+                        <i class="fa-regular fa-heart"></i>
+                    </button>
                 </div>
             </div>
         </section>
     </main>
     <footer>
-        <p class="logo-footer">ohmyfood</p>
+        <img src="/images/logo/ohmyfood@2x.svg" class="logo-footer">
         <ul>
             <li class="footer-links">
                 <i class="fa-solid fa-utensils"></i>
