--- a/restaurants/Le-delice-des-sens.html
+++ b/restaurants/Le-delice-des-sens.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&family=Shrikhand&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/css/style.min.css">
     <title>ohmyfood</title>
 </head>
 <body>
@@ -98,7 +99,7 @@
         </section>
     </main>
     <footer>
-        <p class="logo">ohmyfood</p>
+        <p class="logo-footer">ohmyfood</p>
         <ul>
             <li class="footer-links">
                 <i class="fa-solid fa-utensils"></i>
